--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@okta/okta-auth-js": "^4.6.0",
-    "@okta/okta-react": "^4.1.0",
+    "@okta/okta-auth-js": "^4.2.0",
+    "@okta/okta-react": "^4.0.0",
     "colors": "^1.4.0",
-    "cross-env": "^7.0.3",
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^4.0.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^1.3.1",
+    "semantic-ui-react": "^1.2.1",
     "text-encoding": "^0.7.0"
   },
+  
   "scripts": {
     "start": "cross-env PORT=8080 react-app-rewired start",
     "build": "react-app-rewired build",
@@ -23,10 +24,10 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": "14"
+    "node": ">10"
   },
   "devDependencies": {
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.6"
   },
   "browserslist": {
     "production": [
